fixed font spacing

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -14,6 +14,7 @@ p {
   font-size: 16px;
   line-height: 2;
   font-family: $primary-font;
+  margin-bottom: 25px!important;
 }
 
 h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
